# sgm-lunch

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: update-menu.yml
data/: 2026-01.json  2026-02.json  status.json
scripts/: update_menu.py
tests/: test_update_menu.py
