[project]
name = "sgm-lunch"
version = "0.1.0"
description = "Automated school lunch menu scraper and publisher"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "google-genai>=1.60.0",
    "playwright>=1.57.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
